kubernetes/nginx-app1.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nginx-deployment-app1
  namespace: devops
  labels:
    app: nginx

spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: devopsorient.azurecr.io/webpage8001
          ports:
          - containerPort: 80
          - containerPort: 443
