kubernetes/website-1.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: website-1
  namespace: devops
  labels:
    app: web-1

spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-1
  template:
    metadata:
      labels:
        app: web-1
    spec:
      containers:
        - name: website-1
          image: devopsorient.azurecr.io/webpage8001
          ports:
          - containerPort: 8001

          resources:
            limits:
              memory: "256Mi"
              cpu: "0.1"
